fixed fullscreen by embedding video into div instead of iframe

--- a/youtube.css
+++ b/youtube.css
@@ -9,7 +9,7 @@
     }
     .video {
       flex: 0 0 auto;
-      width: 270px;
-      height: 133px;
+      /*width: 270px;
+      height: 133px;*/
       margin: 10px;
     }
