--- a/html/openai-test.razor
+++ b/html/openai-test.razor
@@ -1,5 +1,4 @@
-<!-- https://jay23606.github.io/chat-gpt-voice/html/openai-test.razor -->
-Sorry about that. Here is the Blazor WASM code with the JavaScript code converted to C#:
+<!-- https://jay23606.github.io/chat-gpt-voice/html/openai-test.razor (WILL NOT WORK NEEDS TO RUN LOCALLY AND IS UNTESTED)-->
 
 @page "/"
 @using System.Net.Http.Json;
